[package]
name = "wgpu_bindings"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
license = "MPL-2.0"
publish = false

[lib]

[features]
default = []

[dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"
# TODO: remove the replay feature on the next update containing https://github.com/gfx-rs/wgpu/pull/5182
features = ["serde", "replay", "trace", "strict_asserts", "wgsl", "api_log_info"]

# We want the wgpu-core Metal backend on macOS and iOS.
# (We should consider also enabling "vulkan" for Vulkan Portability.)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"
features = ["metal"]

# We want the wgpu-core Direct3D backends on Windows.
[target.'cfg(windows)'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"
features = ["dx12"]

# We want the wgpu-core Vulkan backend on Linux and Windows.
[target.'cfg(any(windows, all(unix, not(any(target_os = "macos", target_os = "ios")))))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"
features = ["vulkan"]

[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"

[dependencies.wgh]
package = "wgpu-hal"
git = "https://github.com/gfx-rs/wgpu"
rev = "66d51b6059127b81c7385ec3f2d49c3e81f76f0e"
features = ["oom_panic", "device_lost_panic", "internal_error_panic"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", default-features = false, features = ["Win32_Graphics_Direct3D12"]}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
metal = "0.30"
io-surface = "0.15"

[dependencies]
bincode = "1"
log = "0.4"
parking_lot = "0.12"
serde = "1"
nsstring = { path = "../../xpcom/rust/nsstring" }
static_prefs = { path = "../../modules/libpref/init/static_prefs" }
arrayvec = "0.7"
ash = "0.38"
