[package]
name = "wgpu_bindings"
version = "0.1.0"
authors = [
  "Dzmitry Malyshau <kvark@mozilla.com>",
  "Joshua Groves <josh@joshgroves.com>",
]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]

[features]
default = []

[dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"
# TODO: remove the replay feature on the next update containing https://github.com/gfx-rs/wgpu/pull/5182
features = [
  "serde",
  "replay",
  "trace",
  "strict_asserts",
  "wgsl",
  "api_log_info",
]

# We want the wgpu-core Metal backend on macOS and iOS.
# (We should consider also enabling "vulkan" for Vulkan Portability.)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"
features = ["metal"]

# We want the wgpu-core Direct3D backends on Windows.
[target.'cfg(windows)'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"
features = ["dx12"]

# We want the wgpu-core Vulkan backend on Linux and Windows.
[target.'cfg(any(windows, all(unix, not(any(target_os = "macos", target_os = "ios")))))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"
features = ["vulkan"]

[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"

[dependencies.wgh]
package = "wgpu-hal"
git = "https://github.com/gfx-rs/wgpu"
rev = "3a5d0f2747fd43a0c4db8d911be1aca510c9ee82"
features = ["device_lost_panic", "internal_error_panic"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", default-features = false, features = [
  "Win32_Graphics_Direct3D12",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
metal = "0.32"
io-surface = "0.15"

[dependencies]
bincode = "1"
log = "0.4"
parking_lot = "0.12"
serde = "1"
nsstring = { path = "../../xpcom/rust/nsstring" }
static_prefs = { path = "../../modules/libpref/init/static_prefs" }
arrayvec = "0.7"
ash = "0.38"
