[workspace]
members = [
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
    "example-compositor/compositor",
]
resolver = "2"

[workspace.dependencies]
glean = "=63.0.0"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2

[patch.crates-io]
firefox-on-glean = { path = "fog" }
# use a patched version of glutin that works on android
glutin = { version = "0.28", git = "https://github.com/jamienicol/glutin", branch="wr" }
