[package]
authors = ["The Servo Project Developers"]
description = "Internal utility to measure memory usage in WebRender."
name = "wr_malloc_size_of"
version = "0.2.2"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
path = "lib.rs"

[features]
default = ["app_units", "euclid"]

[dependencies]
app_units = { version = "0.7", optional = true }
euclid = { version = "0.22", optional = true }
once_cell = { version = "1.2.0", optional = true }
