[package]
edition = "2021"
name = "urlpattern_glue"
version = "0.0.1"
authors = ["Ed Guloien <edgul@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
urlpattern = "0.3.0"
url = "2.5.0"
regex = "1.10.5"
mozurl = { path = "../../../netwerk/base/mozurl" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
log = "0.4.0"
